<resources>
    <string name="app_name">Riders Delight</string>
    <string name="page_bike">Gallery</string>
    <string name="history">RE History</string>
    <string name="PersonalDetails">Enter Details</string>
    <string name="plan">Plan My Trip</string>
    <string name="view">View My Trip</string>
    <string name="viewAll">My Trip Details</string>
    <string name="techspec">Tech Spec</string>
    <string name="title_section1">About</string>
    <string name="title_section2">MotorCycles</string>
    <string name="title_section3">RE History</string>
    <string name="title_section4">My Details</string>
    <string name="title_section5">My Trip</string>
    <string name="title_section6">Find Gas Station</string>
    <string name="title_section7">Rate App</string>
    <string name="title_section8">Himalayan</string>
    <string name="sample_text">check</string>
    <string name="header1">RE Motorcycles</string>
    <string name="header2">Nearby Gas Station</string>
    <string name="header3">Info for Users/Developers</string>
    <string name="Range">Range (in kms)</string>
    <string name="Username">Username</string>
    <string name="Username_hint">Username</string>
    <string name="Bull_Type">Bull Type</string>
    <string name="findShowroom">Find Showroom</string>
    <string name="Mileage">Mileage</string>
    <string name="MileageHint">Mileage (approx)</string>
    <string name="fuelCost">Fuel Cost</string>
    <string name="fuelcostHint">Fuel cost per litre</string>
    <string name="emailId">Email Id</string>
    <string name="emailidHint">Email Id</string>
    <string name="ButtonProceed">Proceed</string>
    <string name="ButtonFetch">Fetch</string>
    <string name="CheckboxText">Please tick if return journey is applicable</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="FromHint">From</string>
    <string name="ToHint">To</string>
    <string name="Distance">Distance</string>
    <string name="Type">Journey Type</string>
    <string name="Amount">Amount</string>
    <string name="Litre">Fuel Quantity</string>
    <string name="maybeLater">Maybe Later</string>
    <string name="PlanTrip">Plan my Trip</string>
    <string name="ViewTrip">View my Trip</string>
    <string name="myTrips">My Trips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Ex action</string>
    <string name="action_fuelprice">Check Fuel Price</string>
    <string name="action_tell">Tell A Friend</string>
    <string name="action_dev">App Info</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="action_share">Share</string>
    <string name="action_clear">Clear All</string>
    <string name="action_reminder">Set Reminder</string>
    <string-array name="bikeName">
        <item>Standard Bullet 350</item>
        <item>Bullet Electra 350</item>
        <item>Bullet 500</item>
        <item>Classic 350</item>
        <item>Classic 500</item>
        <item>Classic Chrome</item>
        <item>Classic Battle Green 500</item>
        <item>Classic Desert Storm 500</item>
        <item>Thunderbird 350</item>
        <item>Thunderbird 500</item>
        <item>Continental GT 535</item>
        <item>Himalayan</item>
    </string-array>
    <string-array name="introText">
        <item>Check out your favourite bike gallery and specifications</item>
        <item>Get to know the golden history of RE</item>
        <item>Plan trips and share with friends</item>
        <item>Find nearest petrol station in case you run out of fuel</item>
        </string-array>
    <string-array name="textMessage">
        <item>Welcome to Riders Delight Fuel Tracker app.\nThis app provides basic information about \n\n * RE rich history\n\n * Motorcycle collections\n\n * Motorcycle specifications\n\nfor users information...</item>
        <item>This app serves as the heartbeat for all RE lovers out there!\n\nRE is a leading motorcycle seller in India currently providing top quality motorcycles in both 350cc and 500cc range.\n\nAs of 2015,RE has expanded its flagship empire throughout the world.</item>
        <item>People who wish to buy a RE can \n\n * View exquisite motorcycle available with RE\n\n * Check out each motorcycles in different angles\n\n * Individual Motorcycle specifications</item>
        <item>People who own a RE can \n\n * Plan for trips\n\n * Share trip plan with mates\n\n * View directions of their trip in Google Maps.</item>
        <item>If you run out of fuel, you can \n\n * Find the nearest gas station\n\n * Also get to know updated fuel price in the market.</item>
        <item>As most RE bikes come without a fuel indicator, the important feature in this app is to compute the amount of fuel required to travel\n\nFor every RE owners, monitoring fuel consumption is pretty hard as 350cc/500cc bikes consume more fuel.</item>
        <item>Our beloved users will be provided with latest updates happening in RE.\n\nUsers will be able to receive important notifications about events taking place within the RE community every now and then.</item>
        <item>Happy Riding! Thump it up...</item>
    </string-array>
</resources>