<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha=".10"
        android:scaleType="fitXY"
        android:src="@drawable/re_bg" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="3dp">
    <RelativeLayout
        android:id="@+id/relativelayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp">


        <GridLayout
            android:id="@+id/gridlayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:columnCount="6">

            <TextView
                android:id="@+id/FromTextView"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_row="0"
                android:text="@string/From" />


            <TextView
                android:id="@+id/ToTextView"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_row="1"
                android:text="@string/To" />


            <TextView
                android:id="@+id/DistanceTextView"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_row="2"
                android:text="@string/Distance" />

            <TextView
                android:id="@+id/TypeofJourneyTextView"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_row="3"
                android:text="@string/Type" />

            <TextView
                android:id="@+id/AmountTextView"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_row="4"
                android:text="@string/Amount" />

            <TextView
                android:id="@+id/LitreTextView"
                style="@style/DetailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_row="5"
                android:text="@string/Litre" />

            <TextView
                android:id="@+id/FromValue"
                style="@style/SubText"
                android:layout_column="1"
                android:layout_row="0"
                android:gravity="left" />


            <TextView
                android:id="@+id/ToValue"
                style="@style/SubText"
                android:layout_column="1"
                android:layout_marginTop="10dp"
                android:layout_row="1"
                android:gravity="left" />

            <TextView
                android:id="@+id/DistanceValue"
                style="@style/SubText"
                android:layout_column="1"
                android:layout_row="2"
                android:gravity="left"
                android:singleLine="true" />

            <TextView
                android:id="@+id/TypeOfJourneyValue"
                style="@style/SubText"
                android:layout_column="1"
                android:layout_marginTop="10dp"
                android:layout_row="3"
                android:gravity="left"
                android:singleLine="true" />

            <TextView
                android:id="@+id/AmountValue"
                style="@style/SubText"
                android:layout_column="1"
                android:layout_row="4"
                android:gravity="left"
                android:singleLine="true" />

            <TextView
                android:id="@+id/LitreValue"
                style="@style/SubText"
                android:layout_column="1"
                android:layout_row="5"
                android:gravity="left"
                android:singleLine="true" />
        </GridLayout>


        <Button
            android:id="@+id/buttonURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gridlayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="View Map"
            android:textColor="#808080"
            android:textSize="20sp"
            android:textStyle="bold|normal" />

    </RelativeLayout>
</ScrollView>
</RelativeLayout>