<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:alpha=".20"
        android:scaleType="fitXY"
        android:src="@drawable/re_bg" />

    <TextView
        android:id="@+id/textView2"
        style="@style/bikeText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/header2" />

    <View
        android:id="@+id/view"
        style="@style/view"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />


    <RelativeLayout
        android:id="@+id/relativelayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2">

        <TextView
            android:id="@+id/RangeTextView"
            style="@style/DetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/Range" />

        <Spinner
            android:id="@+id/RangeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/RangeTextView"
            android:layout_toRightOf="@+id/RangeTextView"
            android:gravity="center"
            android:singleLine="true" />

        <Button
            android:id="@+id/buttonFetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RangeSpinner"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/ButtonFetch"
            android:textColor="#808080"
            android:textSize="20sp"
            android:textStyle="bold|normal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativelayout1">

        <View
            android:id="@+id/view1"
            style="@style/viewlist" />

        <ListView
            android:id="@+id/listview_gas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

</RelativeLayout>